--- a/src/components/navigation-links.css
+++ b/src/components/navigation-links.css
@@ -4,16 +4,13 @@
   align-items: center;
   flex-direction: row;
 }
+.navigation-links-text {
+  margin-left: var(--dl-space-space-twounits);
+}
 .navigation-links-text1 {
   margin-left: var(--dl-space-space-twounits);
 }
 .navigation-links-text2 {
-  margin-left: var(--dl-space-space-twounits);
-}
-.navigation-links-text3 {
-  margin-left: var(--dl-space-space-twounits);
-}
-.navigation-links-text4 {
   margin-left: var(--dl-space-space-twounits);
 }
 
@@ -34,6 +31,7 @@
     flex-direction: column;
   }
   .navigation-links-text {
+    margin-left: 0;
     margin-bottom: var(--dl-space-space-unit);
   }
   .navigation-links-text1 {
@@ -41,14 +39,6 @@
     margin-bottom: var(--dl-space-space-unit);
   }
   .navigation-links-text2 {
-    margin-left: 0;
-    margin-bottom: var(--dl-space-space-unit);
-  }
-  .navigation-links-text3 {
-    margin-left: 0;
-    margin-bottom: var(--dl-space-space-unit);
-  }
-  .navigation-links-text4 {
     margin-left: 0;
     margin-bottom: var(--dl-space-space-unit);
   }
